# TunProxy

./: .gitmodules  Readme.md
android_app/: gradle.properties  settings.gradle
android_app/api/: build.gradle
android_app/api/src/main/: AndroidManifest.xml
android_app/api/src/main/aidl/tun/proxy/api/: IStartStopCallback.aidl  ITunProxyRemoteService.aidl
android_app/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android_app/app/src/androidTest/java/tun/proxy/: AppInstrumentedTest.java
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/aidl/tun/proxy/api/: ITunProxyRemoteService.aidl
android_app/app/src/main/cpp/: dhcp.c  dhcp.cpp  dns.c  dns.cpp  http.c  http.cpp  http.h  icmp.cpp  ip.c  ip.cpp  netguard.c  netguard.h  session.c  session.cpp  tcp.c  tcp.cpp  tls.c  tls.cpp  tun2http.cpp  tun2http.h  udp.c  udp.cpp  util.c  util.cpp
android_app/app/src/main/java/tun/proxy/: MainActivity.java  MyApplication.java  SettingsActivity.java  VpnPermissionSupportActivity.java
android_app/app/src/main/java/tun/proxy/di/: DaggerWrapper.java  MainComponent.java  MainModule.java
android_app/app/src/main/java/tun/proxy/event/: HideAppEvent.java  SingleLiveEvent.java
android_app/app/src/main/java/tun/proxy/handler/: ProxyHandler.java
android_app/app/src/main/java/tun/proxy/model/: AppState.java  VpnGrantState.java
android_app/app/src/main/java/tun/proxy/receiver/: BootReceiver.java
android_app/app/src/main/java/tun/proxy/service/: DnsService.java  SharedPrefService.java  Tun2HttpVpnService.java  TunProxyRemoteService.java  TunProxyVpnService.java
android_app/app/src/main/java/tun/proxy/view/: AppStateViewModel.java
android_app/app/src/main/java/tun/utils/: DnsUtil.java  IPUtil.java  SharedPrefUtil.java  Util.java
android_app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android_app/app/src/main/res/layout/: activity_main.xml  content_main.xml
android_app/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  styles.xml
android_app/app/src/main/res/xml/: preferences.xml
android_app/app/src/test/cpp/: CMakeLists.txt  test-tcp.cpp
android_app/gradle/wrapper/: gradle-wrapper.properties
